--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 streamlit==0.60.0
 numpy==1.19.5
 pandas==1.2.4
-opencv-python==4.5.3.56
-scikit-learn==0.24.1
+opencv-python-headless
 keras==2.6.0
 keras-preprocessing==1.1.2
 tensorflow-cpu
