--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==0.60.0
-numpy==1.19.5
-pandas==1.2.4
-opencv-python-headless
-keras==2.6.0
+numpy>=1.19.5
+Keras>=2.4.3
+opencv-contrib-python-headless>=4.5.1.48
+streamlit-webrtc>=0.11.0
+matplotlib>=3.4.2
 keras-preprocessing==1.1.2
-tensorflow-cpu
+tensorflow>=2.5.0
